--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
   "name": "tokensense-web",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-  "react-router-dom": "^6.26.2",
-  "chart.js": "^4.4.4",
-  "react-chartjs-2": "^5.2.0",
-  "react-select": "^5.8.0"
-},
-"devDependencies": {
-  "@vitejs/plugin-react": "^4.3.1",
-  "autoprefixer": "^10.4.21",
-  "postcss": "^8.5.6",
-  "tailwindcss": "^4.1.11",
-  "vite": "^7.0.6"
-}
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "chart.js": "^4.4.4",
+    "react-chartjs-2": "^5.2.0",
+    "react-select": "^5.8.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
+    "vite": "^7.0.6"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
