--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "chart.js": "^4.4.4",
     "react-chartjs-2": "^5.2.0",
-    "react-select": "^5.8.0"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "@tailwindcss/postcss": "^4.1.11",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.11",
     "vite": "^7.0.6"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": "20.19.0"
   }
 }
